[gd_scene load_steps=2 format=3 uid="uid://bugev1l72vt0t"]

[ext_resource type="Script" uid="uid://brjkgg22m8o73" path="res://Scenes/UI/Map/HLabeledSlider.gd" id="1_35kfm"]

[node name="HLabeledSlider" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 3
script = ExtResource("1_35kfm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "TimeLine"
horizontal_alignment = 1

[node name="Slider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
max_value = 7.0

[node name="SliderLabels" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="value_changed" from="VBoxContainer/Slider" to="." method="_on_slider_value_changed"]
